Bug 473866 - Merkuro displays wrong month/days
Summary: Merkuro displays wrong month/days
Status: RESOLVED FIXED
Alias: None
Product: Merkuro
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Claudio Cambra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-28 18:33 UTC by pedrud
Modified: 2023-10-06 16:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of merkuro calendar (126.75 KB, image/png)
2023-08-28 18:33 UTC, pedrud
Details
merkuro off by months and days (87.18 KB, image/jpeg)
2023-09-21 15:27 UTC, Steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pedrud 2023-08-28 18:33:46 UTC
Created attachment 161246 [details]
Screenshot of merkuro calendar

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
Today (Monday, 28.08.2023) I upgraded to Merkuro 23.08.0 on EndeavourOS from Kalendar. Upon opening the app, Merkuro displays the wrong month/days. All events are displayed on the wrong month as well. However, when clicking on an event, it displays the correct information in the detailed popup. Please see the attachment.

As an aside, it also does not respect my locale settings. It displays time as AM/PM and the week starts on Sunday instead of Monday.

STEPS TO REPRODUCE
1. Open merkuro calendar
2. 
3. 

OBSERVED RESULT
Merkuro displays incorrect month/weeks/days

EXPECTED RESULT
It is expected that it would display the current (& correct) month/week/days

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: EndeavourOS
(available in About System)
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.109.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Linux kernel: 6.4.12-arch1-1
Graphics platform: X11
Comment 1 pedrud 2023-09-08 18:52:50 UTC
Any updates on this? I'm still having problems.
Comment 2 Steve 2023-09-21 15:27:35 UTC
Created attachment 161779 [details]
merkuro off by months and days

I am still having this issue as well.
Comment 3 pedrud 2023-10-02 13:27:29 UTC
Is this going to be fixed or even recognized? Ever since the switch from Kalendar to Merkuro the app doesn't work.

Today is Monday, the app displays as Tuesday. We are now in October and it displays as September. When I add new events to my calendar, they are not saved. However, if add events on my phone or Thunderbird, I have no problems.
Comment 4 duha.bugs 2023-10-03 18:57:25 UTC
@pedrud @Steve
I am trying to reproduce this so the Devs have an easier time fixing this. If you are interested you can contact me on https://discuss.kde.org/t/merkuro-off-by-one-day-while-system-is-correct/5209
Comment 5 duha.bugs 2023-10-05 15:44:37 UTC
Marking this as confirmed since I now can reproduce this on both Arch and Tumbleweed.

Steps to reproduce:
1) Set your timezone to US/New york (probably other US also affected) either using timedatectl set-timezone America/New_York
or Systemsettings -> Regional Settings -> Date & Time > Time Zone -> New York
2) Restart Merkuro
Comment 6 Carl Schwan 2023-10-06 16:41:45 UTC
Git commit 22748dee2e3075f69797ecf7aa9c47519137b3c6 by Carl Schwan.
Committed on 06/10/2023 at 18:38.
Pushed by carlschwan into branch 'master'.

Fix shifting of date by one day/month

This was caused by the incorect conversion from QDate and qml date
objects. Use QDateTime instead of QDate as this also store the time.

Fix #230

M  +1    -1    src/calendar/qml/MainViews/BasicInternalHourlyView.qml
M  +1    -1    src/calendar/utils.cpp
M  +1    -1    src/calendar/utils.h

https://invent.kde.org/pim/merkuro/-/commit/22748dee2e3075f69797ecf7aa9c47519137b3c6
Comment 7 Carl Schwan 2023-10-06 16:41:58 UTC
Git commit 60586e4b7c238e3871c690550a09f4ffa7356192 by Carl Schwan.
Committed on 06/10/2023 at 18:41.
Pushed by carlschwan into branch 'release/23.08'.

Fix shifting of date by one day/month

This was caused by the incorect conversion from QDate and qml date
objects. Use QDateTime instead of QDate as this also store the time.

Fix #230

(cherry picked from commit 22748dee2e3075f69797ecf7aa9c47519137b3c6)

M  +1    -1    src/calendar/qml/MainViews/BasicInternalHourlyView.qml
M  +1    -1    src/calendar/utils.cpp
M  +1    -1    src/calendar/utils.h

https://invent.kde.org/pim/merkuro/-/commit/60586e4b7c238e3871c690550a09f4ffa7356192