Fix shifting of date by one day/month

This was caused by the incorect conversion from QDate and qml date
objects. Use QDateTime instead of QDate as this also store the time.

Fix #230
BUG: 473866